--- a/main.css
+++ b/main.css
@@ -1,3 +1,47 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  background-color: peachpuff;
+  background-color: rgb(247, 250, 204);
+}
+
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(147, 181, 182);
+}
+
+.logo {
+  padding: 1em;
+  text-transform: uppercase;
+  
+}
+
+.logo a {
+  color: aliceblue;
+}
+
+ul {
+  list-style: none;
+  text-transform: uppercase;
+  display: flex;
+}
+
+.logo a,
+ul a {
+  text-decoration: none;
+  letter-spacing: .45em;
+}
+
+ul a {
+  display: block;
+  padding: 1em;
+  color: aliceblue;
+}
+
+ul a:hover {
+  background-color: rgb(154, 171, 172);
 }
