edit cats page, change hover, title, and colors

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: rgb(249, 250, 236);
 }
 
 .navigation {
@@ -21,7 +21,7 @@ body {
 }
 
 .logo a {
-  color: aliceblue;
+  color: rgb(249, 250, 236);
 }
 
 ul {
@@ -74,18 +74,26 @@ ul a:hover {
   margin: 0px 300px 300px 50px;
 }
 
-.cat-border {
+
+
+/* .cat-border {
   border: 2px solid rgb(147, 181, 182);
   margin: 25px;
-  width: 300px;
-}
+  width: 500px;
+  border-radius: 10%;
+} */
 
 .cats img {
-  width: 80%;
+  width: 300px;
   margin: 25px;
   display: block;
+  border: 5px rgb(147, 181, 182) solid;
+  border-radius: 10%;
 }
 
 .cat-border:hover {
-  background-color: beige;
+  background-color:   rgb(147, 181, 182);
+  border-radius: 10%;
+  padding: 0px;
+  opacity: 75%;
 }
